1.1.2: January ??, 2008
 * You can no longer edit notes in the trash. You have to undelete them first.

1.1.1: January 17, 2008
 * Beefed up the tour and added some screenshots.

1.1.0: January 15, 2008
 * Users can now upgrade their Luminotes accounts to get additional features
   and storage.
 * Ability to invite people to your notebook as a collaborator or owner.
 * Feature to preview a notebook as a viewer would see it.
 * Note revisions list now include username of the user who made that
   revision.
 * If you go to luminotes.com when you're logged in, you'll be automatically
   redirected to your first notebook.
 * Fixed bug where passwords with special characters broke password hashing.
 * Fixed bug that prevented you from opening a note with a title that looked
   like an external URL.
 * Fixed bug where link info box summaries sometimes contained HTML tags.

1.0.4: December 30, 2007
 * Ability to invite people to view your notebook.
 * When the web browser is resized, all notes are automatically resized as well.
 * Fixed note focusing in Safari.
 * Fixed note state detection (bold, italic, etc.) in Safari.
 * Improved input validation.

1.0.3: November 28, 2007
 * Updated logo, which is now an image and could be theoretically replaced for
   branding purposes.

1.0.2: November 28, 2007
 * Refactored code that creates note summaries for the link info box.
 * Improved error reporting when a loading a page that causes an exception.

1.0.1: November 17, 2007
 * Ability to create, rename, delete, and switch between multiple wiki
   notebooks in a single account.

1.0.0: November 12, 2007
 * Initial release.